scripts/skel/keptn/keptn-bridge-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bridge
  namespace: keptn
spec:
  hosts:
  - "bridge.keptn.YOUR_KEPTNIP_PLACEHOLDER"
  gateways:
  - keptn-gateway
  http:
    - route:
      - destination:
          host: bridge.keptn.svc.cluster.local
