scripts/skel/keptn/prometheus-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: keptn
spec:
  hosts:
  - "prometheus.keptn.YOUR_KEPTNIP_PLACEHOLDER"
  gateways:
  - keptn-gateway
  http:
    - route:
      - destination:
          host: prometheus-service.monitoring.svc.cluster.local
